# python_project_boilerplate

./: README.md  pyproject.toml
src/boilerplate/: counter.py
tests/: test_version.py
