[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boilerplate"
version = "0.0.1"
description = ""
dependencies = []

[project.optional-dependencies]
dev = [
    "build==1.0.3",
    "ruff==0.2.1",
    "mypy==1.8.0",
]

[tool.huak.task]
counter = "python3 src/boilerplate/counter.py"
